# miner-harness

./: .coverage.claude.pid3.XTQBlLZx.HLhidamyyZvh  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/adr/: ADR-001-stack-decision.md  ADR-002-geosgb-data-access.md  ADR-003-engineering-security-standards.md  ADR-004-user-interface.md  ADR-005-remote-sensing-strategy.md
docs/architecture/: branch-protection.md  critica-especializada-2026-05-21.md  environment-protocols.md  fase-0-baseline-governanca.md  fase-0-gate-saida.md  fase-1-discovery-report.md  fase-1-gate-saida.md  fase-10-gate-saida.md  fase-11-gate-saida.md  fase-2-gate-saida.md  fase-3-gate-saida.md  fase-4-gate-saida.md  fase-5-gate-saida.md  fase-6-gate-saida.md  fase-7-gate-saida.md  fase-8-gate-saida.md  fase-9-gate-saida.md  knowledge-crystallization-local.md  system-overview.md  wizard-gate-saida.md
docs/personas/: dr-augusto-valen.md
docs/prd/: PRD-001-miner-harness.md  PRD-002-salto-qualidade-analitica.md
docs/rfc/: RFC-001-geosgb-connector.md  RFC-002-agent-orchestration.md  RFC-003-storage-and-index.md
infra/: docker-compose.yml
ollama/: qwen3-64k.Modelfile
scripts/: pull_models.sh  run_analysis.sh  setup_dev.sh  train_rf_seed.py
src/miner_harness/: __init__.py
src/miner_harness/agents/: __init__.py  base.py  evaluator.py  geochemist.py  geophysicist.py  remote_sensing.py  structural_geo.py
src/miner_harness/cache/: __init__.py  manager.py  sqlite_store.py  ttl_policy.py  types.py
src/miner_harness/cli/: __init__.py  app.py  commands.py
src/miner_harness/connectors/: __init__.py
src/miner_harness/connectors/anm/: __init__.py  connector.py
src/miner_harness/connectors/geosgb/: __init__.py  aeromag_connector.py  alias_mapper.py  connector.py  grid_extractor.py  sanitizer.py  services.py  throttled_client.py
src/miner_harness/connectors/ollama/: __init__.py  client.py  prompt_manager.py  registry.py
src/miner_harness/connectors/sentinel2/: __init__.py  connector.py  processor.py
src/miner_harness/connectors/usgs/: __init__.py  connector.py
src/miner_harness/core/: __init__.py  config.py  exceptions.py  types.py
src/miner_harness/export/: __init__.py  gis_exporter.py
src/miner_harness/geochemistry/: __init__.py  normalizer.py
src/miner_harness/geophysics/: __init__.py  aeromag_processor.py  bouguer_processor.py
src/miner_harness/index/: __init__.py  document_store.py  embedder.py  search_engine.py  text_builder.py  types.py
src/miner_harness/ingestion/: __init__.py  drillhole_parser.py  drillhole_store.py
src/miner_harness/ml/: __init__.py  feature_builder.py  scorer.py
src/miner_harness/ml/model/: rf_prospectivity_v1.joblib
src/miner_harness/observability/: __init__.py  health.py  logging_config.py  metrics.py  profiler.py
src/miner_harness/orchestrator/: __init__.py  confidence_calibrator.py  context_builder.py  orchestrator.py  report_validator.py
src/miner_harness/prospectivity/: __init__.py  scorer.py
src/miner_harness/rca/: __init__.py  classifier.py  diagnostics.py  reporter.py  retry.py
src/miner_harness/report/: __init__.py  docx_exporter.py  renderer.py
src/miner_harness/report/templates/: report.html.j2
src/miner_harness/self_improvement/: __init__.py  feedback_loop.py  profiler.py  rca_learner.py  tuner.py
src/miner_harness/server/: __init__.py  analysis_runner.py  server.py  sse.py
src/miner_harness/wizard/: __init__.py  checks.py  installer.py  runner.py
tests/: conftest.py
tests/agents/: test_agents.py
tests/benchmarks/: conftest.py  test_cache_bench.py  test_pipeline_bench.py  test_profiler.py  test_sse_bench.py
tests/cache/: test_manager.py  test_sqlite_store.py  test_ttl_policy.py
tests/cli/: test_app.py  test_commands.py
tests/connectors/anm/: test_connector.py
tests/connectors/geosgb/: test_aeromag_connector.py  test_alias_mapper.py  test_connector.py  test_grid_extractor.py  test_sanitizer.py  test_services.py  test_throttled_client.py
tests/connectors/ollama/: test_client.py  test_prompt_manager.py  test_registry.py
tests/connectors/sentinel2/: test_connector.py  test_processor.py
tests/connectors/usgs/: test_connector.py
tests/contract/: test_module_contracts.py
tests/core/: test_config.py  test_exceptions.py  test_types.py
tests/e2e/: conftest.py  test_anm_live.py  test_geosgb_live.py  test_ollama_live.py  test_pipeline_live.py  test_rag_live.py  test_report_live.py  test_server_live.py  test_usgs_live.py
tests/export/: test_gis_exporter.py
tests/geochemistry/: test_normalizer.py
tests/geophysics/: test_aeromag_processor.py  test_bouguer_processor.py
tests/index/: test_document_store.py  test_search_engine.py  test_text_builder.py
tests/ingestion/: test_drillhole_parser.py  test_drillhole_store.py
tests/integration/: test_cache_index_pipeline.py  test_orchestrator_pipeline.py
tests/ml/: test_feature_builder.py  test_scorer.py
tests/observability/: test_health.py  test_logging_config.py  test_metrics.py
tests/orchestrator/: test_confidence_calibrator.py  test_context_builder.py  test_orchestrator.py  test_report_validator.py
tests/property/: test_property_based.py
tests/prospectivity/: test_scorer.py
tests/rca/: __init__.py  test_classifier.py  test_diagnostics.py  test_reporter.py  test_retry.py
tests/report/: test_docx_exporter.py  test_renderer.py
tests/self_improvement/: test_feedback_loop.py  test_profiler.py  test_rca_learner.py  test_tuner.py
tests/server/: test_analysis_runner.py  test_server.py  test_sse.py
tests/wizard/: test_checks.py  test_installer.py  test_runner.py
