[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miner-harness"
version = "0.1.0"
description = "Sistema de prospecção mineral inteligente com agentes de IA e LLMs locais"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    # Core
    "pydantic>=2.0",
    "httpx>=0.27",
    "structlog>=24.0",

    # LLM
    "ollama>=0.4",

    # Geospatial (RFC-001, RFC-003)
    "geopandas>=1.0",
    "shapely>=2.0",
    "fiona>=1.10",
    "pyproj>=3.7",

    # Cache & Index (RFC-003)
    "sqlite-vec>=0.1",

    # CLI / TUI (ADR-004)
    "textual>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "bandit>=1.8",
    "mypy>=1.13",
    "pip-audit>=2.7",
]

[project.scripts]
miner-harness = "miner_harness.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "fiona.*",
    "sqlite_vec.*",
    "ollama.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/miner_harness"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
