[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miner-harness"
version = "0.1.12"
description = "Sistema de prospeccao mineral inteligente com agentes de IA e LLMs locais"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Victor Augusto MM", email = "victoraugustomm@gmail.com" },
]
keywords = ["geologia", "prospecção mineral", "LLM", "agentes IA", "GeoSGB", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Portuguese (Brazilian)",
]
dependencies = [
    # Core
    "pydantic>=2.0",
    "httpx>=0.27",
    "structlog>=24.0",

    # LLM
    "ollama>=0.4",

    # Geospatial (RFC-001, RFC-003)
    "geopandas>=1.0",
    "shapely>=2.0",
    "fiona>=1.10",
    "pyproj>=3.7",

    # Cache & Index (RFC-003)
    "sqlite-vec>=0.1",

    # CLI / TUI (ADR-004)
    "textual>=1.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/VictorAMM/miner-harness"
Repository = "https://github.com/VictorAMM/miner-harness"
Changelog = "https://github.com/VictorAMM/miner-harness/blob/main/CHANGELOG.md"
Issues = "https://github.com/VictorAMM/miner-harness/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "ruff>=0.8",
    "bandit>=1.8",
    "mypy>=1.13",
    "pip-audit>=2.7",
    "hypothesis>=6.0",
]

[project.scripts]
miner-harness = "miner_harness.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring live GeoSGB API and/or Ollama (opt-in via MINER_E2E=1)",
]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "fiona.*",
    "sqlite_vec.*",
    "ollama.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/miner_harness"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]

[dependency-groups]
dev = [
    "hypothesis>=6.152.7",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.3",
    "hypothesis>=6.0",
    "ruff>=0.15.13",
]
